// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bud.project contains a repository 1`] = `
Object {
  "browserslist": Object {
    "development": Array [
      "last 1 chrome version",
      "last 1 firefox version",
      "last 1 safari version",
    ],
    "production": Array [
      ">0.5%",
      "not dead",
      "not op_mini all",
    ],
  },
  "devDependencies": Object {
    "@roots/bud": "workspace:*",
    "@roots/bud-babel": "workspace:*",
  },
  "extensions": Object {
    "@roots/bud-babel": Object {
      "bud": Object {
        "type": "extension",
      },
      "dependsOn": Array [],
      "name": "@roots/bud-babel",
      "path": StringContaining "@roots/bud-babel",
      "provides": Object {
        "@babel/core": Any<String>,
        "@babel/plugin-proposal-class-properties": Any<String>,
        "@babel/plugin-proposal-object-rest-spread": Any<String>,
        "@babel/plugin-syntax-dynamic-import": Any<String>,
        "@babel/plugin-transform-runtime": Any<String>,
        "@babel/preset-env": Any<String>,
        "@roots/bud-build": "workspace:packages/@roots/bud-build",
        "babel-loader": Any<String>,
        "babel-plugin-add-module-exports": Any<String>,
        "tslib": Any<String>,
      },
      "version": Any<String>,
    },
  },
  "manifestPath": StringContaining "babel/package.json",
  "name": "example-babel",
  "private": true,
}
`;

exports[`bud.project discover method gathers dep data 1`] = `
Object {
  "bud": Object {
    "type": "extension",
  },
  "dependsOn": Array [],
  "name": "@roots/bud-babel",
  "path": StringContaining "@roots/bud-babel",
  "provides": Object {
    "@babel/core": Any<String>,
    "@babel/plugin-proposal-class-properties": Any<String>,
    "@babel/plugin-proposal-object-rest-spread": Any<String>,
    "@babel/plugin-syntax-dynamic-import": Any<String>,
    "@babel/plugin-transform-runtime": Any<String>,
    "@babel/preset-env": Any<String>,
    "@roots/bud-build": Any<String>,
    "babel-loader": Any<String>,
    "babel-plugin-add-module-exports": Any<String>,
    "tslib": Any<String>,
  },
  "version": Any<String>,
}
`;

exports[`bud.project resolveFrom contains paths of found peers 1`] = `
Array [
  StringContaining "@roots/bud-babel",
]
`;

exports[`bud.project resolveFrom contains paths of found peers 2`] = `
Array [
  StringContaining "src",
  StringContaining "node_modules",
  StringContaining "@roots/bud-babel",
]
`;
